# khamr

./: .gitignore  .gitmodules  .travis.yml  README.md  __metadata__.py  pyproject.toml  requirements.txt  setup.py
assets/: preface-body.tex
etc/: A-storyboard.txt  B-analysis.txt  B-storyboard.txt  C-storyboard.txt  D-analysis.txt  D-storyboard.txt  E-storyboard.txt  TODO  analyses.txt  material-analyses.txt  percussion.txt  rhetoric.txt  secondary-materials.txt  segment-analyses.txt  time.txt
khamr/: MarkupLibrary.py  ScoreTemplate.py  __init__.py  __metadata__  __metadata__.py  library.py  stylesheet.ily  tools.py
khamr/builds/: all-parts.tex  score.tex  segment-04.ly  segment-05.ly
khamr/etc/: 1-storyboard.txt  2-storyboard.txt  3-storyboard.txt  4-storyboard.txt  5-storyboard.txt  A-storyboard.txt  B-storyboard.txt  TODO  material-analyses.txt  notes.md  percussion.txt  secondary-materials.txt  time.txt  to-do.txt
khamr/makers/: MarimbaHitSpecifier.py  MusicMaker.py  ScoreTemplate.py  SegmentMaker.py
khamr/materials/: __abbreviations__.py  __init__.py  abbreviations.py  miscellaneous.py
khamr/sections/: stylesheet.ily
khamr/segments/: __metadata__.py  __views__.py  stylesheet.ily
khamr/stylesheets/: context-definitions.ily  contexts.ily  default-instrument-names.ily  instrument-names.ily  markups.ily  nonfirst-segment.ily  scheme.ily  stylesheet.ily
khamr/test/: illustrate_segments.py  run_example.py  run_tests_with_timing.py  test_khamr_materials.py  test_khamr_segments.py  test_materials.py  test_segments.py
khamr/tools/: MarimbaHitCommand.py  (+46 more)
(+369 files in other folders)
