[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khamr"
version = "3.21"
description = "Al-kitab al-khamr (2015) for chamber orchestra"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = [
    "abjad>=3.21",
    "black",
    "flake8",
    "isort",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/trevorbaca/khamr"

[tool.setuptools]
packages = ["khamr"]
package-dir = { "" = "source" }
